# small-renderer

./: .gitignore  CMakeLists.txt  README.md
src/: camera.h  color.h  common_stuff.h  hittable.h  hittable_list.h  main.cpp  material.h  ray.h  sphere.h  vec3.h
